# UlamSpiral

./: .gitignore  CMakeLists.txt  main.cpp
src/: Framework.h  Spiral.h  main.cpp
